--- a/index.html
+++ b/index.html
@@ -1,186 +1,269 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Support Ticket Form</title>
-<style>
-body {
-  font-family: Arial, sans-serif;
-  background: #f5f6fa;
-  padding: 30px;
-}
-form {
-  background: white;
-  padding: 25px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  max-width: 600px;
-  margin: auto;
-}
-input, select, textarea, button {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
-  border-radius: 6px;
-  border: 1px solid #ccc;
-  font-size: 1rem;
-}
-button {
-  background: #007bff;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-button:hover { background: #0056b3; }
-#status { text-align: center; margin-top: 15px; font-weight: bold; }
-.hidden { display: none; }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PMNPIS Help Center Ticketing System</title>
+  <style>
+    body {
+      font-family: "Inter", sans-serif;
+      background: #f9fafb;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 650px;
+      background: #fff;
+      padding: 2rem;
+      margin: 3rem auto;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 1.5rem;
+      color: #0066cc;
+    }
+    .form-group {
+      margin-bottom: 1rem;
+    }
+    label {
+      font-weight: 600;
+      display: block;
+      margin-bottom: 0.5rem;
+    }
+    select, input, textarea {
+      width: 100%;
+      padding: 0.75rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+      box-sizing: border-box;
+    }
+    textarea {
+      min-height: 120px;
+      resize: vertical;
+    }
+    button {
+      background: #0066cc;
+      color: white;
+      border: none;
+      padding: 0.9rem 1.5rem;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1rem;
+      width: 100%;
+    }
+    button:hover {
+      background: #0054a3;
+    }
+    .hidden { display: none; }
+  </style>
 </head>
 <body>
+  <div class="container">
+    <h2>PMNPIS Help Center Ticket Form</h2>
+    <form id="ticketForm">
+      <div class="form-group">
+        <label>Name</label>
+        <input type="text" id="name" required>
+      </div>
 
-<form id="ticketForm">
-  <h2>Submit Support Ticket</h2>
-  <input name="name" placeholder="Full Name" required>
-  <input name="email" type="email" placeholder="Email Address" required>
-  <input name="position" placeholder="Position">
+      <div class="form-group">
+        <label>Email</label>
+        <input type="email" id="email" required>
+      </div>
 
-  <select name="supportLevel" id="supportLevel" required>
-    <option value="">Select Support Level</option>
-    <option>MPMO Support</option>
-    <option>Provincial Support</option>
-    <option>Regional Support</option>
-    <option>NPMO Technical Workstreams</option>
-  </select>
+      <div class="form-group">
+        <label>Position</label>
+        <input type="text" id="position" required>
+      </div>
 
-  <div id="orgFields">
-    <select name="region" id="region" class="hidden">
-      <option value="">Select Region</option>
-    </select>
-    <select name="province" id="province" class="hidden">
-      <option value="">Select Province</option>
-    </select>
-    <select name="municipality" id="municipality" class="hidden">
-      <option value="">Select Municipality</option>
-    </select>
+      <div class="form-group">
+        <label>Support Level</label>
+        <select id="supportLevel" required>
+          <option value="">Select Support Level</option>
+          <option value="MPMO Support">MPMO Support</option>
+          <option value="Provincial Support">Provincial Support</option>
+          <option value="Regional Support">Regional Support</option>
+          <option value="NPMO Technical Workstreams">NPMO Technical Workstreams</option>
+        </select>
+      </div>
+
+      <div class="form-group" id="region-group">
+        <label>Region</label>
+        <select id="region"></select>
+      </div>
+
+      <div class="form-group" id="province-group">
+        <label>Province</label>
+        <select id="province"></select>
+      </div>
+
+      <div class="form-group" id="municipality-group">
+        <label>Municipality</label>
+        <select id="municipality"></select>
+      </div>
+
+      <div class="form-group">
+        <label>Category</label>
+        <select id="category" required>
+          <option value="">Select Category</option>
+          <option value="HCSC Questions/Masterlists">HCSC Questions/Masterlists</option>
+          <option value="UI/UX">UI/UX</option>
+          <option value="User Accounts">User Accounts</option>
+          <option value="Additional Features">Additional Features</option>
+          <option value="Formula and Logics">Formula and Logics</option>
+          <option value="User Role and Access">User Role and Access</option>
+          <option value="Functionality Errors">Functionality Errors</option>
+          <option value="Backend">Backend</option>
+          <option value="Dashboards, Reports and Line List">Dashboards, Reports and Line List</option>
+          <option value="Formats">Formats</option>
+          <option value="Job Aids">Job Aids</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label>Description</label>
+        <textarea id="description" required></textarea>
+      </div>
+
+      <button type="submit">Submit Ticket</button>
+    </form>
   </div>
 
-  <select name="category" required>
-    <option value="">Select Category</option>
-    <option>HCSC Questions/Masterlists</option>
-    <option>UI/UX</option>
-    <option>User Accounts</option>
-    <option>Additional Features</option>
-    <option>Formula and Logics</option>
-    <option>Reports and Dashboard</option>
-    <option>User Role and Access</option>
-    <option>Functionality Errors</option>
-    <option>Backend</option>
-    <option>Formats</option>
-    <option>Job Aids</option>
-  </select>
+  <script>
+  const backendUrl = 'https://script.google.com/macros/s/AKfycbzJeZgDkZJuia7EKX4hUBf3er0rrxTCPNVBrMvM6eZUc-fNwRa9s-f7tSbpCus-rR3Q/exec';
+  let locationData = [];
 
-  <textarea name="description" placeholder="Describe your issue" required></textarea>
-  <input type="file" id="files" multiple>
-  <button type="submit">Submit Ticket</button>
-  <div id="status"></div>
-</form>
+  // Load locations
+  async function loadLocations() {
+    try {
+      const res = await fetch(`${backendUrl}?action=getLocations`);
+      const data = await res.json();
 
-<script>
-    const backendUrl = 'https://script.google.com/macros/s/AKfycbzJeZgDkZJuia7EKX4hUBf3er0rrxTCPNVBrMvM6eZUc-fNwRa9s-f7tSbpCus-rR3Q/exec';
-
-    async function loadLocations() {
-      try {
-        const res = await fetch(`${backendUrl}?action=getLocations`);
-        const data = await res.json();
-        console.log(data);
-        if (data.status === 'success') populateDropdowns(data.data);
-      } catch (err) {
-        console.error('❌ Location load error:', err);
+      if (data.status === 'success' && Array.isArray(data.data)) {
+        locationData = data.data;
+        console.log('✅ Locations loaded:', locationData.length);
+      } else {
+        console.error('⚠️ No valid data returned.');
       }
+    } catch (err) {
+      console.error('❌ Failed to load locations:', err);
     }
+  }
 
-    function populateDropdowns(data) {
-      const regions = [...new Set(data.map(d => d.region))].filter(Boolean);
-      const regionSelect = document.getElementById('region');
-      regionSelect.innerHTML =
-        `<option value="">Select Region</option>` +
-        regions.map(r => `<option value="${r}">${r}</option>`).join('');
-    }
+  // Populate dropdowns dynamically
+  function populateDropdowns(regionSelect, provinceSelect, municipalitySelect) {
+    const regions = [...new Set(locationData.map(d => d.region))].filter(Boolean);
+    regionSelect.innerHTML = `<option value="">Select Region</option>` +
+      regions.map(r => `<option value="${r}">${r}</option>`).join('');
 
-    async function submitForm(e) {
-      e.preventDefault();
-      const formData = collectFormData();
-      try {
-        const res = await fetch(backendUrl, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(formData)
-        });
-        const data = await res.json();
-        if (data.status === 'success') {
-          alert(`✅ Submitted! Ticket ID: ${data.ticketId}`);
-        } else {
-          alert(`❌ ${data.message}`);
-        }
-      } catch (err) {
-        alert(`❌ Failed to submit: ${err.message}`);
+    regionSelect.onchange = () => {
+      const selectedRegion = regionSelect.value;
+      const provinces = [...new Set(
+        locationData.filter(d => d.region === selectedRegion).map(d => d.province)
+      )].filter(Boolean);
+
+      provinceSelect.innerHTML = `<option value="">Select Province</option>` +
+        provinces.map(p => `<option value="${p}">${p}</option>`).join('');
+
+      municipalitySelect.innerHTML = `<option value="">Select Municipality</option>`;
+    };
+
+    provinceSelect.onchange = () => {
+      const selectedProvince = provinceSelect.value;
+      const municipalities = locationData
+        .filter(d => d.province === selectedProvince)
+        .map(d => d.municipality)
+        .filter(Boolean);
+
+      municipalitySelect.innerHTML = `<option value="">Select Municipality</option>` +
+        municipalities.map(m => `<option value="${m}">${m}</option>`).join('');
+    };
+  }
+
+  // Strict logic for support level visibility
+  function setupSupportLevelLogic() {
+    const supportSelect = document.getElementById('supportLevel');
+    const regionGroup = document.getElementById('region-group');
+    const provinceGroup = document.getElementById('province-group');
+    const municipalityGroup = document.getElementById('municipality-group');
+
+    regionGroup.style.display = 'none';
+    provinceGroup.style.display = 'none';
+    municipalityGroup.style.display = 'none';
+
+    supportSelect.addEventListener('change', () => {
+      const level = supportSelect.value;
+      regionGroup.style.display = 'none';
+      provinceGroup.style.display = 'none';
+      municipalityGroup.style.display = 'none';
+
+      if (level === 'MPMO Support') {
+        regionGroup.style.display = 'block';
+        provinceGroup.style.display = 'block';
+        municipalityGroup.style.display = 'block';
+      } else if (level === 'Provincial Support') {
+        regionGroup.style.display = 'block';
+        provinceGroup.style.display = 'block';
+      } else if (level === 'Regional Support') {
+        regionGroup.style.display = 'block';
       }
+    });
+  }
+
+  // Collect data
+  function collectFormData() {
+    return {
+      name: document.getElementById('name').value,
+      email: document.getElementById('email').value,
+      position: document.getElementById('position').value,
+      supportLevel: document.getElementById('supportLevel').value,
+      region: document.getElementById('region').value,
+      province: document.getElementById('province').value,
+      municipality: document.getElementById('municipality').value,
+      category: document.getElementById('category').value,
+      description: document.getElementById('description').value
+    };
+  }
+
+  // Submit form
+  async function submitForm(e) {
+    e.preventDefault();
+    const formData = collectFormData();
+
+    try {
+      const res = await fetch(backendUrl, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(formData)
+      });
+
+      const data = await res.json();
+      if (data.status === 'success') {
+        alert(`✅ Ticket submitted! ID: ${data.ticketId}`);
+        document.getElementById('ticketForm').reset();
+      } else {
+        alert(`❌ ${data.message}`);
+      }
+    } catch (err) {
+      alert(`❌ Failed to submit: ${err.message}`);
     }
+  }
 
-    function collectFormData() {
-      return {
-        name: document.getElementById('name').value,
-        email: document.getElementById('email').value,
-        position: document.getElementById('position').value,
-        supportLevel: document.getElementById('supportLevel').value,
-        region: document.getElementById('region').value,
-        province: document.getElementById('province').value,
-        municipality: document.getElementById('municipality').value,
-        category: document.getElementById('category').value,
-        description: document.getElementById('description').value
-      };
-    }
+  window.onload = async () => {
+    await loadLocations();
+    populateDropdowns(
+      document.getElementById('region'),
+      document.getElementById('province'),
+      document.getElementById('municipality')
+    );
+    setupSupportLevelLogic();
 
-  window.onload = loadLocations;  
-
-  function populateDropdowns(data) {
-  const regions = [...new Set(data.map(d => d.region))].filter(Boolean);
-  const regionSelect = document.getElementById('region');
-  const provinceSelect = document.getElementById('province');
-  const muniSelect = document.getElementById('municipality');
-
-  regionSelect.innerHTML =
-    `<option value="">Select Region</option>` +
-    regions.map(r => `<option value="${r}">${r}</option>`).join('');
-
-  regionSelect.onchange = () => {
-    const selectedRegion = regionSelect.value;
-    const provinces = [...new Set(data
-      .filter(d => d.region === selectedRegion)
-      .map(d => d.province)
-    )].filter(Boolean);
-
-    provinceSelect.innerHTML =
-      `<option value="">Select Province</option>` +
-      provinces.map(p => `<option value="${p}">${p}</option>`).join('');
-
-    muniSelect.innerHTML = `<option value="">Select Municipality</option>`;
+    document.getElementById('ticketForm').addEventListener('submit', submitForm);
   };
-
-  provinceSelect.onchange = () => {
-    const selectedProvince = provinceSelect.value;
-    const municipalities = data
-      .filter(d => d.province === selectedProvince)
-      .map(d => d.municipality)
-      .filter(Boolean);
-
-    muniSelect.innerHTML =
-      `<option value="">Select Municipality</option>` +
-      municipalities.map(m => `<option value="${m}">${m}</option>`).join('');
-  };
-}
-  
   </script>
 </body>
 </html>
