--- a/index.html
+++ b/index.html
@@ -1,62 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PMNPIS Help Center Ticketing System</title>
   <style>
     body {
       font-family: "Inter", sans-serif;
-      background: #f9fafb;
-      color: #333;
+      background: #f5f6fa;
       margin: 0;
       padding: 0;
     }
     .container {
-      max-width: 650px;
+      max-width: 700px;
       background: #fff;
-      padding: 2rem;
       margin: 3rem auto;
+      padding: 2rem;
       border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     }
     h2 {
       text-align: center;
-      margin-bottom: 1.5rem;
       color: #0066cc;
+      margin-bottom: 1.5rem;
     }
     .form-group {
-      margin-bottom: 1rem;
+      margin-bottom: 1.2rem;
     }
     label {
       font-weight: 600;
       display: block;
       margin-bottom: 0.5rem;
     }
-    select, input, textarea {
+    input, select, textarea {
       width: 100%;
       padding: 0.75rem;
-      border-radius: 8px;
       border: 1px solid #ccc;
+      border-radius: 8px;
       font-size: 1rem;
       box-sizing: border-box;
     }
     textarea {
-      min-height: 120px;
+      min-height: 100px;
       resize: vertical;
     }
     button {
+      width: 100%;
       background: #0066cc;
       color: white;
       border: none;
-      padding: 0.9rem 1.5rem;
       border-radius: 8px;
+      padding: 0.9rem;
       cursor: pointer;
       font-size: 1rem;
-      width: 100%;
     }
-    button:hover {
-      background: #0054a3;
+    button:hover { background: #004c99; }
+    #status {
+      text-align: center;
+      font-weight: bold;
+      margin-top: 1rem;
     }
     .hidden { display: none; }
   </style>
@@ -66,18 +68,18 @@
     <h2>PMNPIS Help Center Ticket Form</h2>
     <form id="ticketForm">
       <div class="form-group">
-        <label>Name</label>
-        <input type="text" id="name" required>
+        <label>Full Name</label>
+        <input id="name" required />
       </div>
 
       <div class="form-group">
-        <label>Email</label>
-        <input type="email" id="email" required>
+        <label>Email Address</label>
+        <input id="email" type="email" required />
       </div>
 
       <div class="form-group">
         <label>Position</label>
-        <input type="text" id="position" required>
+        <input id="position" required />
       </div>
 
       <div class="form-group">
@@ -91,17 +93,17 @@
         </select>
       </div>
 
-      <div class="form-group" id="region-group">
+      <div class="form-group" id="region-group" class="hidden">
         <label>Region</label>
         <select id="region"></select>
       </div>
 
-      <div class="form-group" id="province-group">
+      <div class="form-group" id="province-group" class="hidden">
         <label>Province</label>
         <select id="province"></select>
       </div>
 
-      <div class="form-group" id="municipality-group">
+      <div class="form-group" id="municipality-group" class="hidden">
         <label>Municipality</label>
         <select id="municipality"></select>
       </div>
@@ -110,17 +112,17 @@
         <label>Category</label>
         <select id="category" required>
           <option value="">Select Category</option>
-          <option value="HCSC Questions/Masterlists">HCSC Questions/Masterlists</option>
-          <option value="UI/UX">UI/UX</option>
-          <option value="User Accounts">User Accounts</option>
-          <option value="Additional Features">Additional Features</option>
-          <option value="Formula and Logics">Formula and Logics</option>
-          <option value="User Role and Access">User Role and Access</option>
-          <option value="Functionality Errors">Functionality Errors</option>
-          <option value="Backend">Backend</option>
-          <option value="Dashboards, Reports and Line List">Dashboards, Reports and Line List</option>
-          <option value="Formats">Formats</option>
-          <option value="Job Aids">Job Aids</option>
+          <option>HCSC Questions/Masterlists</option>
+          <option>UI/UX</option>
+          <option>User Accounts</option>
+          <option>Additional Features</option>
+          <option>Formula and Logics</option>
+          <option>User Role and Access</option>
+          <option>Functionality Errors</option>
+          <option>Backend</option>
+          <option>Dashboards, Reports and Line List</option>
+          <option>Formats</option>
+          <option>Job Aids</option>
         </select>
       </div>
 
@@ -129,140 +131,149 @@
         <textarea id="description" required></textarea>
       </div>
 
+      <div class="form-group">
+        <label>Attachments</label>
+        <input type="file" id="files" multiple />
+      </div>
+
       <button type="submit">Submit Ticket</button>
+      <div id="status"></div>
     </form>
   </div>
 
   <script>
-  const backendUrl = 'https://script.google.com/macros/s/AKfycbzJeZgDkZJuia7EKX4hUBf3er0rrxTCPNVBrMvM6eZUc-fNwRa9s-f7tSbpCus-rR3Q/exec';
+  const backendUrl = "https://script.google.com/macros/s/YOUR_DEPLOYMENT_ID/exec";
   let locationData = [];
 
-  // Load locations
+  // --- Load PSGC data ---
   async function loadLocations() {
     try {
       const res = await fetch(`${backendUrl}?action=getLocations`);
       const data = await res.json();
-
-      if (data.status === 'success' && Array.isArray(data.data)) {
+      if (data.status === "success" && Array.isArray(data.data)) {
         locationData = data.data;
-        console.log('✅ Locations loaded:', locationData.length);
-      } else {
-        console.error('⚠️ No valid data returned.');
+        console.log("✅ Loaded locations:", locationData.length);
       }
     } catch (err) {
-      console.error('❌ Failed to load locations:', err);
+      console.error("❌ Failed to load locations:", err);
     }
   }
 
-  // Populate dropdowns dynamically
-  function populateDropdowns(regionSelect, provinceSelect, municipalitySelect) {
+  // --- Populate cascading dropdowns ---
+  function populateDropdowns() {
+    const regionSel = document.getElementById("region");
+    const provinceSel = document.getElementById("province");
+    const muniSel = document.getElementById("municipality");
+
     const regions = [...new Set(locationData.map(d => d.region))].filter(Boolean);
-    regionSelect.innerHTML = `<option value="">Select Region</option>` +
-      regions.map(r => `<option value="${r}">${r}</option>`).join('');
+    regionSel.innerHTML = `<option value="">Select Region</option>` +
+      regions.map(r => `<option>${r}</option>`).join("");
 
-    regionSelect.onchange = () => {
-      const selectedRegion = regionSelect.value;
-      const provinces = [...new Set(
-        locationData.filter(d => d.region === selectedRegion).map(d => d.province)
-      )].filter(Boolean);
-
-      provinceSelect.innerHTML = `<option value="">Select Province</option>` +
-        provinces.map(p => `<option value="${p}">${p}</option>`).join('');
-
-      municipalitySelect.innerHTML = `<option value="">Select Municipality</option>`;
+    regionSel.onchange = () => {
+      const selected = regionSel.value;
+      const provinces = [...new Set(locationData.filter(d => d.region === selected).map(d => d.province))].filter(Boolean);
+      provinceSel.innerHTML = `<option value="">Select Province</option>` +
+        provinces.map(p => `<option>${p}</option>`).join("");
+      muniSel.innerHTML = `<option value="">Select Municipality</option>`;
     };
 
-    provinceSelect.onchange = () => {
-      const selectedProvince = provinceSelect.value;
-      const municipalities = locationData
-        .filter(d => d.province === selectedProvince)
-        .map(d => d.municipality)
-        .filter(Boolean);
-
-      municipalitySelect.innerHTML = `<option value="">Select Municipality</option>` +
-        municipalities.map(m => `<option value="${m}">${m}</option>`).join('');
+    provinceSel.onchange = () => {
+      const selected = provinceSel.value;
+      const munis = locationData.filter(d => d.province === selected).map(d => d.municipality).filter(Boolean);
+      muniSel.innerHTML = `<option value="">Select Municipality</option>` +
+        munis.map(m => `<option>${m}</option>`).join("");
     };
   }
 
-  // Strict logic for support level visibility
-  function setupSupportLevelLogic() {
-    const supportSelect = document.getElementById('supportLevel');
-    const regionGroup = document.getElementById('region-group');
-    const provinceGroup = document.getElementById('province-group');
-    const municipalityGroup = document.getElementById('municipality-group');
+  // --- Show/hide org fields based on support level ---
+  function setupSupportLogic() {
+    const regionGroup = document.getElementById("region-group");
+    const provinceGroup = document.getElementById("province-group");
+    const municipalityGroup = document.getElementById("municipality-group");
+    const support = document.getElementById("supportLevel");
 
-    regionGroup.style.display = 'none';
-    provinceGroup.style.display = 'none';
-    municipalityGroup.style.display = 'none';
+    regionGroup.style.display = "none";
+    provinceGroup.style.display = "none";
+    municipalityGroup.style.display = "none";
 
-    supportSelect.addEventListener('change', () => {
-      const level = supportSelect.value;
-      regionGroup.style.display = 'none';
-      provinceGroup.style.display = 'none';
-      municipalityGroup.style.display = 'none';
+    support.addEventListener("change", () => {
+      const val = support.value;
+      regionGroup.style.display = "none";
+      provinceGroup.style.display = "none";
+      municipalityGroup.style.display = "none";
 
-      if (level === 'MPMO Support') {
-        regionGroup.style.display = 'block';
-        provinceGroup.style.display = 'block';
-        municipalityGroup.style.display = 'block';
-      } else if (level === 'Provincial Support') {
-        regionGroup.style.display = 'block';
-        provinceGroup.style.display = 'block';
-      } else if (level === 'Regional Support') {
-        regionGroup.style.display = 'block';
+      if (val === "MPMO Support") {
+        regionGroup.style.display = "block";
+        provinceGroup.style.display = "block";
+        municipalityGroup.style.display = "block";
+      } else if (val === "Provincial Support") {
+        regionGroup.style.display = "block";
+        provinceGroup.style.display = "block";
+      } else if (val === "Regional Support") {
+        regionGroup.style.display = "block";
       }
     });
   }
 
-  // Collect data
-  function collectFormData() {
-    return {
-      name: document.getElementById('name').value,
-      email: document.getElementById('email').value,
-      position: document.getElementById('position').value,
-      supportLevel: document.getElementById('supportLevel').value,
-      region: document.getElementById('region').value,
-      province: document.getElementById('province').value,
-      municipality: document.getElementById('municipality').value,
-      category: document.getElementById('category').value,
-      description: document.getElementById('description').value
-    };
+  // --- Convert file to Base64 ---
+  function toBase64(file) {
+    return new Promise((resolve, reject) => {
+      const reader = new FileReader();
+      reader.onload = () => resolve(reader.result);
+      reader.onerror = reject;
+      reader.readAsDataURL(file);
+    });
   }
 
-  // Submit form
+  // --- Form submission ---
   async function submitForm(e) {
     e.preventDefault();
-    const formData = collectFormData();
+    const status = document.getElementById("status");
+    status.style.color = "black";
+    status.textContent = "Submitting...";
+
+    const files = document.getElementById("files").files;
+    const uploads = [];
+    for (const file of files) {
+      const base64 = await toBase64(file);
+      uploads.push({ name: file.name, data: base64 });
+    }
+
+    const data = {
+      name: document.getElementById("name").value,
+      email: document.getElementById("email").value,
+      position: document.getElementById("position").value,
+      supportLevel: document.getElementById("supportLevel").value,
+      region: document.getElementById("region").value,
+      province: document.getElementById("province").value,
+      municipality: document.getElementById("municipality").value,
+      category: document.getElementById("category").value,
+      description: document.getElementById("description").value,
+      files: uploads
+    };
 
     try {
       const res = await fetch(backendUrl, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(formData)
+        method: "POST",
+        mode: "no-cors", // prevents CORS errors
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(data)
       });
 
-      const data = await res.json();
-      if (data.status === 'success') {
-        alert(`✅ Ticket submitted! ID: ${data.ticketId}`);
-        document.getElementById('ticketForm').reset();
-      } else {
-        alert(`❌ ${data.message}`);
-      }
+      status.style.color = "green";
+      status.textContent = "✅ Ticket submitted successfully!";
+      e.target.reset();
     } catch (err) {
-      alert(`❌ Failed to submit: ${err.message}`);
+      status.style.color = "red";
+      status.textContent = `❌ Failed: ${err.message}`;
     }
   }
 
   window.onload = async () => {
     await loadLocations();
-    populateDropdowns(
-      document.getElementById('region'),
-      document.getElementById('province'),
-      document.getElementById('municipality')
-    );
-    setupSupportLevelLogic();
-
-    document.getElementById('ticketForm').addEventListener('submit', submitForm);
+    populateDropdowns();
+    setupSupportLogic();
+    document.getElementById("ticketForm").addEventListener("submit", submitForm);
   };
   </script>
 </body>
