--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </div>
 
   <script>
-    const scriptURL = "YOUR_APPS_SCRIPT_EXEC_URL"; // 🔗 Replace this with your deployed Apps Script Web App URL
+    const scriptURL = "https://script.google.com/macros/s/AKfycbzjTZnaCsB0m4429FDNrZ2DQDlEEDlcH3gupN_wSXcBKFv-z8GhTN4beLcTbQ1eJW4_/exec"; // 🔗 Replace this with your deployed Apps Script Web App URL
 
     // --- Load regionData.json for dropdowns ---
     let psgcData = {};
