--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 min-h-screen flex items-center justify-center">
+  <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-2xl">
+    <h1 class="text-2xl font-bold text-center text-blue-700 mb-6">PMNP-IS Help Center</h1>
 
-  <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-md">
-    <div class="flex flex-col items-center mb-6">
-      <div class="bg-blue-600 text-white text-2xl font-bold rounded-full w-14 h-14 flex items-center justify-center">PM</div>
-      <h1 class="text-2xl font-bold mt-3">PMNP-IS Help Center</h1>
-      <p class="text-gray-500 text-sm">Submit a support ticket</p>
-    </div>
-
-    <form id="ticketForm" class="space-y-4">
-      <div>
-        <label class="block text-sm font-medium">Full Name</label>
-        <input type="text" name="name" required class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500" />
+    <form id="ticketForm" class="grid grid-cols-1 md:grid-cols-2 gap-4">
+      <div class="col-span-2">
+        <label class="block text-sm font-semibold">Full Name</label>
+        <input type="text" name="name" required class="w-full border rounded-md p-2" />
       </div>
 
       <div>
-        <label class="block text-sm font-medium">Email</label>
-        <input type="email" name="email" required class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500" />
+        <label class="block text-sm font-semibold">Email</label>
+        <input type="email" name="email" required class="w-full border rounded-md p-2" />
       </div>
 
       <div>
-        <label class="block text-sm font-medium">Concern Type</label>
-        <select name="category" id="category" required class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500">
-          <option value="">Select Concern Type</option>
+        <label class="block text-sm font-semibold">CC (optional)</label>
+        <input type="email" name="cc" placeholder="Enter additional email" class="w-full border rounded-md p-2" />
+      </div>
+
+      <div class="col-span-2">
+        <label class="block text-sm font-semibold">Type of Concern</label>
+        <select id="category" name="category" required class="w-full border rounded-md p-2">
+          <option value="">Select Concern</option>
           <option value="MPMO Support">MPMO Support</option>
           <option value="Provincial Support">Provincial Support</option>
           <option value="Regional Support">Regional Support</option>
@@ -37,86 +37,124 @@
         </select>
       </div>
 
-      <div id="regionWrapper" class="hidden">
-        <label class="block text-sm font-medium">Region</label>
-        <input type="text" name="region" class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500" />
+      <div id="regionWrapper" class="hidden col-span-2 md:col-span-1">
+        <label class="block text-sm font-semibold">Region</label>
+        <select id="region" name="region" class="w-full border rounded-md p-2"></select>
       </div>
 
-      <div id="provinceWrapper" class="hidden">
-        <label class="block text-sm font-medium">Province</label>
-        <input type="text" name="province" class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500" />
+      <div id="provinceWrapper" class="hidden col-span-2 md:col-span-1">
+        <label class="block text-sm font-semibold">Province</label>
+        <select id="province" name="province" class="w-full border rounded-md p-2"></select>
       </div>
 
-      <div id="municipalityWrapper" class="hidden">
-        <label class="block text-sm font-medium">Municipality</label>
-        <input type="text" name="municipality" class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500" />
+      <div id="municipalityWrapper" class="hidden col-span-2">
+        <label class="block text-sm font-semibold">Municipality</label>
+        <select id="municipality" name="municipality" class="w-full border rounded-md p-2"></select>
       </div>
 
-      <div>
-        <label class="block text-sm font-medium">Subject</label>
-        <input type="text" name="subject" required class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500" />
+      <div class="col-span-2">
+        <label class="block text-sm font-semibold">Subject</label>
+        <input type="text" name="subject" required class="w-full border rounded-md p-2" />
       </div>
 
-      <div>
-        <label class="block text-sm font-medium">Description</label>
-        <textarea name="message" required rows="3" class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500"></textarea>
+      <div class="col-span-2">
+        <label class="block text-sm font-semibold">Description</label>
+        <textarea name="message" rows="3" required class="w-full border rounded-md p-2"></textarea>
       </div>
 
-      <div>
-        <label class="block text-sm font-medium">Attachment(s)</label>
-        <input type="file" name="file" multiple class="mt-1 w-full border rounded-md px-3 py-2" />
+      <div class="col-span-2">
+        <label class="block text-sm font-semibold">Attachments (optional)</label>
+        <input type="file" name="file" multiple class="w-full border rounded-md p-2" />
       </div>
 
-      <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700 transition">Submit Ticket</button>
+      <div class="col-span-2 text-center mt-4">
+        <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">Submit Ticket</button>
+      </div>
     </form>
 
     <div id="toast" class="hidden mt-4 text-center text-white py-2 rounded-md"></div>
   </div>
 
   <script>
-    const scriptURL = "https://script.google.com/macros/s/AKfycbztuQmXfCVLNYGNoiwgR8JWz8yLCE4SD0vgncvpESVaj6GpZqR5tHtZWWf3gpnSCzsu/exec";
+    const scriptURL = "https://script.google.com/macros/s/AKfycbxxKiNQI_DAUoZL9R36iKwQREP4Cby9XBGoq923H6TL3rcvoRm6cRktMBdirgUMu9ta/exec"; // Replace with your /exec URL
 
-    const form = document.getElementById("ticketForm");
+    const regionSelect = document.getElementById("region");
+    const provinceSelect = document.getElementById("province");
+    const municipalitySelect = document.getElementById("municipality");
+    const categorySelect = document.getElementById("category");
     const toast = document.getElementById("toast");
 
-    // Category logic visibility
-    const categorySelect = document.getElementById("category");
     const regionWrapper = document.getElementById("regionWrapper");
     const provinceWrapper = document.getElementById("provinceWrapper");
     const municipalityWrapper = document.getElementById("municipalityWrapper");
 
+    // Load region data
+    let regionData = {};
+    fetch("regionData.json")
+      .then(res => res.json())
+      .then(data => {
+        regionData = data;
+        populateRegions();
+      });
+
+    function populateRegions() {
+      regionSelect.innerHTML = '<option value="">Select Region</option>';
+      Object.keys(regionData).forEach(region => {
+        regionSelect.innerHTML += `<option value="${region}">${region}</option>`;
+      });
+    }
+
+    regionSelect.addEventListener("change", () => {
+      const provinces = Object.keys(regionData[regionSelect.value] || {});
+      provinceSelect.innerHTML = '<option value="">Select Province</option>';
+      provinces.forEach(prov => {
+        provinceSelect.innerHTML += `<option value="${prov}">${prov}</option>`;
+      });
+      municipalitySelect.innerHTML = '<option value="">Select Municipality</option>';
+    });
+
+    provinceSelect.addEventListener("change", () => {
+      const munis = regionData[regionSelect.value]?.[provinceSelect.value] || [];
+      municipalitySelect.innerHTML = '<option value="">Select Municipality</option>';
+      munis.forEach(m => {
+        municipalitySelect.innerHTML += `<option value="${m}">${m}</option>`;
+      });
+    });
+
     categorySelect.addEventListener("change", () => {
-      const selected = categorySelect.value;
+      const val = categorySelect.value;
       regionWrapper.classList.add("hidden");
       provinceWrapper.classList.add("hidden");
       municipalityWrapper.classList.add("hidden");
 
-      if (selected === "MPMO Support") {
+      if (val === "MPMO Support") {
         regionWrapper.classList.remove("hidden");
         provinceWrapper.classList.remove("hidden");
         municipalityWrapper.classList.remove("hidden");
-      } else if (selected === "Provincial Support") {
+      } else if (val === "Provincial Support") {
         regionWrapper.classList.remove("hidden");
         provinceWrapper.classList.remove("hidden");
-      } else if (selected === "Regional Support") {
+      } else if (val === "Regional Support") {
         regionWrapper.classList.remove("hidden");
       }
     });
 
-    form.addEventListener("submit", async (e) => {
+    document.getElementById("ticketForm").addEventListener("submit", async (e) => {
       e.preventDefault();
-      const formData = new FormData(form);
+      const formData = new FormData(e.target);
+
       try {
         const res = await fetch(scriptURL, { method: "POST", body: formData });
         const data = await res.json();
+
         if (data.success) {
           showToast(`✅ Ticket submitted! ID: ${data.ticketId}`, "bg-green-600");
-          form.reset();
+          e.target.reset();
         } else {
-          showToast(`❌ ${data.error || "Submission failed"}`, "bg-red-600");
+          showToast(`❌ ${data.error}`, "bg-red-600");
         }
       } catch (err) {
-        showToast("❌ Network or server error", "bg-red-600");
+        showToast("❌ Network error. Please try again.", "bg-red-600");
       }
     });
 
